--- a/src/app/components/menu/home/home.component.css
+++ b/src/app/components/menu/home/home.component.css
@@ -232,10 +232,18 @@
 .error-message{
     text-align: center;
     font-size: 1.25rem;
+    font-weight: 300;
     color: #121212;
 }
 .btn-create {
     margin-top: .5rem;
     background-color: #E74E00;
     color: #FFF;
+}
+.five-recipes-title{
+    font-family: 'Oxygen', sans-serif;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin: .25rem 0;
 }
