--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -42,7 +42,7 @@
                 </div> -->
                 <mat-list-item routerLink="/home">
                     <mat-icon mat-list-icon>home</mat-icon>
-                    <span>Home</span>
+                    <span>Inicio</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/home">
@@ -51,18 +51,18 @@
                 </mat-list-item>
 
                 <mat-list-item routerLink="/recipes">
-                    <mat-icon mat-list-icon>perm_contact_calenda</mat-icon>
-                    <span>Recipes</span>
+                    <mat-icon mat-list-icon>local_library</mat-icon>
+                    <span>Recetas</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/restaurants">
-                    <mat-icon mat-list-icon>perm_contact_calenda</mat-icon>
-                    <span>Restaurants</span>
+                    <mat-icon mat-list-icon>restaurant</mat-icon>
+                    <span>Restaurantes</span>
                 </mat-list-item>
 
-                <mat-list-item routerLink="/home">
+                <mat-list-item routerLink="/profile">
                     <mat-icon mat-list-icon>person</mat-icon>
-                    <span>Profile</span>
+                    <span>Perfil</span>
                 </mat-list-item>
 
                 <mat-list-item>
