--- a/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.html
+++ b/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.html
@@ -8,30 +8,25 @@
                 <div class="recipe-stats">
                     <div class="row">
                         <div class="col-auto" style="margin-top: auto; margin-bottom: auto;">
-                            <ngb-rating [max]="5" [(rate)]="starRating" [readonly]="false"
-                            (hover)="hovered=$event" (leave)="hovered=0"
-                            [formControl]="ratingRecipeForm"
-                            (click)="saveRating()"></ngb-rating>
+                            <ngb-rating [max]="5" [(rate)]="starRating" [readonly]="false" (hover)="hovered=$event"
+                                (leave)="hovered=0" [formControl]="ratingRecipeForm" (click)="saveRating()">
+                            </ngb-rating>
                             <span style="font-size: 1rem;">{{ avg }}</span>
                         </div>
-                        
 
-                        
+
+
                         <div class="col-auto">
-                            <button mat-icon-button class="btn-bb">
-                                <mat-icon #tooltip="matTooltip"
-                                matTooltip="Guardar Receta"
-                                [matTooltipPosition]="position.value"
-                                (click)="saveRecipe()">bookmark_border</mat-icon>
+                            <button mat-icon-button class="btn-bb" (click)="saveRecipe()">
+                                <mat-icon #tooltip="matTooltip" matTooltip="Guardar Receta"
+                                    [matTooltipPosition]="position.value">bookmark_border</mat-icon>
                             </button>
                         </div>
 
                         <div class="col-auto">
-                            <button mat-icon-button class="btn-bb">
-                                <mat-icon #tooltip="matTooltip"
-                                matTooltip="Descargar Receta"
-                                [matTooltipPosition]="position.value"
-                                (click)="createPdf()">download</mat-icon>
+                            <button mat-icon-button class="btn-bb" (click)="createPdf()">
+                                <mat-icon #tooltip="matTooltip" matTooltip="Descargar Receta"
+                                    [matTooltipPosition]="position.value">download</mat-icon>
                             </button>
                         </div>
                     </div>
@@ -60,9 +55,9 @@
                     </div>
                 </div>
             </div>
-            
-            
-            
+
+
+
             <div class="recipe-tabs-container">
                 <mat-tab-group>
                     <mat-tab label="Preparación">
@@ -72,7 +67,8 @@
                         <div class="mat-tab-contain">
                             <div *ngFor="let typeOfIngredient of recipeDetails['ingredientTypes']; let i = index">
                                 <!-- {{ typeOfIngredient.name }} -->
-                                <div *ngFor="let ingredients of recipeDetails['ingredientTypes'][i]['ingredientsList']; let j = index;">
+                                <div
+                                    *ngFor="let ingredients of recipeDetails['ingredientTypes'][i]['ingredientsList']; let j = index;">
                                     <ul>
                                         <li>
                                             {{ ingredients.quantity }} {{ ingredients.unit }} de {{ ingredients.name }}
@@ -80,8 +76,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            
-                            
+
+
                         </div>
                     </mat-tab>
                 </mat-tab-group>
