Update color button

--- a/src/app/components/menu/home/recipes/recipes.component.css
+++ b/src/app/components/menu/home/recipes/recipes.component.css
@@ -15,7 +15,7 @@
     font-family: 'Oxygen', sans-serif;
     font-weight: 700;
     padding: .35rem 1rem;
-    background-color: #29DC56;
+    background-color: #E74E00;
     color: #FFF;
 }
 .recipes-container h2{
