--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -60,6 +60,11 @@
                     <span>Restaurantes</span>
                 </mat-list-item>
 
+                <mat-list-item routerLink="/search">
+                    <mat-icon mat-list-icon>search</mat-icon>
+                    <span>Buscar</span>
+                </mat-list-item>
+
                 <mat-list-item routerLink="/profile">
                     <mat-icon mat-list-icon>person</mat-icon>
                     <span>Perfil</span>
